--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,24 +1,39 @@
-<div class="p-3 border rounded-lg bg-gray-50 flex justify-between items-start">
-  <p>
-    <strong><%= comment.user&.username || "Deleted User" %>:</strong>
-    <%= comment.content %>
-  </p>
+<div class="p-3 border rounded-lg bg-gray-50">
+  <!-- Main Comment -->
+  <div class="flex flex-col">
+    <div class="flex justify-between items-start">
+      <p class="flex-1">
+        <strong><%= comment.user&.username || "Deleted User" %>:</strong>
+        <%= comment.content %>
+      </p>
+      <div class="flex space-x-3">
+        <% if current_user == comment.user %>
+          <%= link_to "Edit", edit_pin_comment_path(comment.pin, comment),
+              class: "text-blue-600 text-sm" %>
+          <%= button_to "Delete",
+              pin_comment_path(comment.pin, comment),
+              method: :delete,
+              data: { confirm: "Delete this comment?" },
+              class: "text-red-600 text-sm" %>
+        <% end %>
+        <%= link_to "Reply",
+            new_pin_comment_path(comment.pin, parent_id: comment.id),
+            class: "text-gray-600 text-sm" %>
+      </div>
+    </div>
 
-  <div class="flex space-x-2">
-    <% if current_user == comment.user %>
-      <%= link_to "Edit", edit_pin_comment_path(comment.pin, comment),
-          class: "text-blue-600 text-sm" %>
-
-      <%= button_to "Delete",
-          pin_comment_path(comment.pin, comment),
-          method: :delete,
-          data: { confirm: "Delete this comment?" },
-          class: "text-red-600 text-sm" %>
+    <!-- Replies Section -->
+    <% if comment.replies.any? %>
+      <div class="ml-6 mt-2 border-l-2 border-gray-200 pl-4 space-y-2">
+        <% comment.replies.each do |reply| %>
+          <div class="p-2 bg-gray-100 rounded-lg">
+            <p>
+              <strong><%= reply.user&.username || "Deleted User" %>:</strong>
+              <%= reply.content %>
+            </p>
+          </div>
+        <% end %>
+      </div>
     <% end %>
-
-    <!-- REPLY BUTTON (always visible) -->
-    <%= link_to "Reply",
-        new_pin_comment_path(comment.pin, parent_id: comment.id),
-        class: "text-gray-600 text-sm" %>
   </div>
 </div>
