--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,21 +16,22 @@
     <%= render 'layouts/header' %>
 
     <main class="pt-14">
-      <% if notice %>
+
+      <% if flash[:notice] %>
         <div class="mb-4 bg-green-50 border border-green-200 text-green-800 px-4 py-3 rounded-xl relative flex items-center shadow-sm max-w-4xl mx-auto">
           <svg class="w-5 h-5 mr-2 text-green-600" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
           </svg>
-          <span><%= notice %></span>
+          <span><%= flash[:notice] %></span>
         </div>
       <% end %>
 
-      <% if alert %>
+      <% if flash[:alert] %>
         <div class="mb-4 bg-red-50 border border-red-200 text-red-800 px-4 py-3 rounded-xl relative flex items-center shadow-sm max-w-4xl mx-auto">
           <svg class="w-5 h-5 mr-2 text-red-600" fill="currentColor" viewBox="0 0 20 20">
             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
           </svg>
-          <span><%= alert %></span>
+          <span><%= flash[:alert] %></span>
         </div>
       <% end %>
 
@@ -47,7 +48,7 @@
         Home
       <% end %>
 
-      <!-- 🔴 Explore Pins (Added) -->
+      <!-- Explore -->
       <%= link_to pins_path, class: "flex flex-col items-center text-xs hover:text-red-400 transition" do %>
         <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
