--- a/app/views/pins/_save_modal.html.erb
+++ b/app/views/pins/_save_modal.html.erb
@@ -1,6 +1,8 @@
 <div 
   class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
   data-save-modal-target="overlay"
+  data-controller="save-modal"
+  data-save-modal-pin-uid="<%= @pin.uid %>"
 >
   <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
 
@@ -12,7 +14,7 @@
         <button 
           class="w-full text-left px-4 py-2 border rounded-lg hover:bg-gray-100"
           data-action="click->save-modal#saveToExisting"
-          data-collection-id="<%= collection.id %>"
+          data-collection-uid="<%= collection.uid %>"
         >
           <%= collection.name %>
         </button>
@@ -27,6 +29,7 @@
         class="w-full px-3 py-2 border rounded-lg"
         data-save-modal-target="newCollectionName"
       >
+
       <button 
         class="mt-2 w-full bg-blue-600 text-white py-2 rounded-lg hover:bg-blue-700"
         data-action="click->save-modal#createCollection"
