Users can now search for each other in the application

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,11 +10,11 @@
         <% if current_user == comment.user %>
 
           <%= link_to "Edit",
-              edit_pin_comment_path(comment.pin, comment),   <!-- FIXED -->
+              edit_pin_comment_path(comment.pin, comment),
               class: "text-blue-600 text-sm" %>
 
           <%= button_to "Delete",
-              pin_comment_path(comment.pin, comment),        <!-- FIXED -->
+              pin_comment_path(comment.pin, comment),
               method: :delete,
               data: { confirm: "Delete this comment?" },
               class: "text-red-600 text-sm" %>
@@ -22,7 +22,7 @@
         <% end %>
 
         <%= link_to "Reply",
-            new_pin_comment_path(comment.pin, parent_id: comment.uid),  <!-- UID here is correct -->
+            new_pin_comment_path(comment.pin, parent_id: comment.id),
             class: "text-gray-600 text-sm" %>
       </div>
     </div>
