--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
       <% end %>
 
       <!-- Search -->
-      <%= link_to "#", class: "flex flex-col items-center text-xs hover:text-red-400 transition" do %>
+      <%= link_to user_search_path, class: "flex flex-col items-center text-xs hover:text-red-400 transition" do %>
         <svg class="w-6 h-6 mb-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-4.35-4.35M11 18a7 7 0 100-14 7 7 0 000 14z"/>
         </svg>
