--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -4,8 +4,8 @@
     <div style="color: red;">
       <h2><%= pluralize(pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
       <ul>
-        <% pin.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% pin.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
@@ -20,7 +20,8 @@
   <!-- Description field -->
   <div>
     <%= form.label :description, style: "display: block;" %>
-    <%= form.text_area :description %> 
+    <%= form.text_area :description %>
+  </div>
 
   <!-- Image upload field -->
   <div class="field">
