--- a/app/views/pins/_pin_card.html.erb
+++ b/app/views/pins/_pin_card.html.erb
@@ -1,5 +1,5 @@
 <div class="break-inside-avoid mb-4 rounded-xl overflow-hidden shadow-sm hover:shadow-lg transition-shadow bg-white">
-  <%= link_to pin_path(pin.uid) do %>
+  <%= link_to pin_path(pin), class: "block" do %>
     <% if pin.image.attached? %>
       <%= image_tag url_for(pin.image), class: "w-full h-auto object-cover rounded-t-xl" %>
     <% end %>
@@ -10,8 +10,8 @@
 
     <% if current_user == pin.user %>
       <div class="flex space-x-2 mb-2">
-        <%= link_to "Edit", edit_pin_path(pin.uid), class: "px-2 py-1 bg-blue-100 text-blue-600 rounded text-sm" %>
-        <%= button_to "Delete", pin_path(pin.uid), method: :delete, data: { confirm: "Are you sure?" }, class: "px-2 py-1 bg-red-100 text-red-600 rounded text-sm" %>
+        <%= link_to "Edit", edit_pin_path(pin), class: "px-2 py-1 bg-blue-100 text-blue-600 rounded text-sm" %>
+        <%= button_to "Delete", pin_path(pin), method: :delete, data: { confirm: "Are you sure?" }, class: "px-2 py-1 bg-red-100 text-red-600 rounded text-sm" %>
       </div>
     <% end %>
 
