--- a/app/views/pins/_save_modal.html.erb
+++ b/app/views/pins/_save_modal.html.erb
@@ -2,7 +2,7 @@
   class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
   data-save-modal-target="overlay"
   data-controller="save-modal"
-  data-save-modal-pin-uid="<%= @pin.uid %>"
+  data-save-modal-pin-id="<%= @pin.id %>"
 >
   <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
 
@@ -14,7 +14,7 @@
         <button 
           class="w-full text-left px-4 py-2 border rounded-lg hover:bg-gray-100"
           data-action="click->save-modal#saveToExisting"
-          data-collection-uid="<%= collection.uid %>"
+          data-collection-id="<%= collection.id %>"
         >
           <%= collection.name %>
         </button>
